# IfcToUsd

./: .gitignore  CLAUDE.md  GLTF_to_Voxel.ipynb  IFC_to_GLTF.ipynb  IFC_to_RDF.ipynb  IFC_to_USD.ipynb  README.md  pyproject.toml
docs/: overview.html  worklog-2026-07-07.md
docs/viewer/: README.md  architecture.md  backlog.md  blender-omniverse-checklist.md  digital-twin-spec.md  e9-implementation-plan.md  gutp-buildingos-poc-checklist.md  payload-lazy-load-findings.md  (+5 more)
files/: ToyodaLab.ifc
ifc2usd/: __init__.py  cli.py  gltf.py  ifc.py  mapping.py  scene_index.py  sdf.py  sdf_slice.py  serve.py  space_heatmap.py  twin.py  twin_proxy.py  usd.py  voxel.py
tests/: conftest.py  generate_fixture.py  test_cli.py  test_convert.py  test_display_mode_e2e.py  test_export_gltf_cli.py  test_gltf.py  test_hover_e2e.py  test_mapping.py  test_property_panel_e2e.py  test_scene_index.py  test_sdf.py  test_sdf_slice.py  test_sdf_slice_viewer_e2e.py  test_section_clip_e2e.py  test_selection_e2e.py  test_selection_highlight_e2e.py  test_serve.py  test_space_geometry.py  test_space_heatmap.py  test_space_heatmap_e2e.py  test_space_voxelize_cli.py  test_toolbar_shortcuts_e2e.py  test_tree_e2e.py  test_tree_improvements_e2e.py  test_twin.py  test_twin_live_e2e.py  test_twin_playback_e2e.py  test_twin_proxy.py  test_viewer_e2e.py  test_voxel.py  test_voxel_highlight_e2e.py  test_voxel_json.py  test_voxel_pointinstancer.py  test_voxel_rendering_color_e2e.py  test_voxel_selection_e2e.py  test_voxel_v1_convert.py  test_voxel_viewer_e2e.py  test_voxelize_cli.py  test_wireframe_e2e.py
(+3 files in other folders)
