[project]
name = "ifc2usd"
version = "0.1.0"
description = "Convert IFC (building BIM) models into a structured OpenUSD stage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ifcopenshell>=0.8",
    "usd-core>=25.5",
    "numpy>=1.24",
    "tqdm>=4.0",
    "trimesh>=4.0",
    "rtree>=1.0",
]

[project.scripts]
ifc2usd = "ifc2usd.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "playwright>=1.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ifc2usd"]
